fix: Forgot to add this
body:

--- a/projects/student_intervention/student_intervention.ipynb
+++ b/projects/student_intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Graduation rate of the class: 67.09%\n"
@@ -107,7 +107,7 @@
     "n_students = len(student_data)\n",
     "\n",
     "# TODO: Calculate number of features\n",
-    "n_features = len(student_data.columns)\n",
+    "n_features = len(student_data.columns) - 1\n",
     "\n",
     "# TODO: Calculate passing students\n",
     "n_passed = len(student_data[student_data.passed == 'yes'])\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -366,12 +366,14 @@
     "\n",
     "#### Strengths of the Model\n",
     "\n",
-    "I think one of the biggest strenghts of decisions trees is its ability to predict arbitrarily complex models.\n",
+    "Decision trees are easier to and understand and visualize. Decisions trees also perform well even if its assumptions are sometimes violated by the true underlying model that generated the data.\n",
     "\n",
     "For classification, decision trees are very fast at predicting.\n",
     "\n",
     "#### Weaknesses of the Model\n",
-    "It doesn't do well on very large sets of data, or sets of data that have a lot of attributes.\n",
+    "Decision trees can be unstable due to small variations in the data that can result in completely different trees being generated.\n",
+    "\n",
+    "Learning the optimal tree is NP-complete. Thus most decision tree learners use heuristics to generate trees and usually generate locally optimal trees.\n",
     "\n",
     "#### Why is this a good candidate for this problem\n",
     "The amount of data is small. I also hypothesize that there are very few attributes that yield most of the information gain so I'm thinking the time to create the learner will be small.\n",
@@ -384,10 +386,10 @@
     "_Reference_:\n",
     "RADA, Rexhep; RUSETI, Bashkim. Some Applications of K-Nearest Neighbor Algorithm In Customer Relationship Management.\n",
     "#### Strengths of the Model\n",
-    "KNN training is faster than training other learning algorithms. It can train arbitrarily complex concepts.\n",
+    "KNN is very effective at training noisy data and is good at training very large data sets.\n",
     "\n",
     "#### Weaknesses of the Model\n",
-    "Inference of KNN algorithms is slower than other learning algorithms (lazy algorithm). The accuracy of a KNN classifier is dependent on the quality of the distance function. The distance function quality is a function of domain knowledge. KNN also suffers from the curse of dimensionality.\n",
+    "Inference of KNN algorithms is slower than other learning algorithms (lazy algorithm). The accuracy of a KNN classifier is dependent on the quality of the distance function. The distance function quality is a function of domain knowledge. \n",
     "\n",
     "#### Why is this a good candidate for this problem\n",
     "I think that students that pass or fail have a lot in common with each other (they are close to each other) and the number of features they have in common is small relative to the total number of features. I also don't think it's linear so I think an instance-based approach is a good choice.\n",
@@ -403,7 +405,7 @@
     "#### Strengths of the Model\n",
     "Boosting learns fast. Is able to make use of other learning algorithms and combine weak classifiers of these learning algorithms and create arbitrarly accurate classifiers. Another interesting strength of boosting is that it can exhibit increasing ability to generalize even after it is no longer able to increase accuracy over a training data set.\n",
     "#### Weaknesses of the Model\n",
-    "If the underlying weak classifier overfits, then the boosted form of the algorithm will fit and cannot recover from this.\n",
+    "If the underlying weak classifier overfits, then the boosted form of the algorithm will over fit and cannot recover from this.\n",
     "#### Why is this a good candidate for this problem\n",
     "I can combine simple decision trees together via boosting to create a very accurate classifier. I'm concerned that I may not be able to identify which features to put into a single decision tree to result in a single highly accurate classifier but with boosting, I can use the algorithm to create a set of simple decision trees that automatically pick the right features."
    ]
@@ -422,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -496,79 +498,79 @@
      "output_type": "stream",
      "text": [
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0020 seconds\n",
-      "Made predictions in 0.0007 seconds.\n",
+      "Trained model in 0.0015 seconds\n",
+      "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0003 seconds.\n",
-      "F1 score for test set: 0.6965.\n",
+      "Made predictions in 0.0005 seconds.\n",
+      "F1 score for test set: 0.6545.\n",
       "\n",
       "\n",
       "Training a KNeighborsClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0009 seconds\n",
-      "Made predictions in 0.0017 seconds.\n",
-      "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0047 seconds.\n",
+      "Trained model in 0.0007 seconds\n",
+      "Made predictions in 0.0015 seconds.\n",
+      "F1 score for training set: 0.8322.\n",
+      "Made predictions in 0.0036 seconds.\n",
       "F1 score for test set: 0.7800.\n",
       "\n",
       "\n",
       "Training a AdaBoostClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.2131 seconds\n",
-      "Made predictions in 0.0058 seconds.\n",
-      "F1 score for training set: 0.9706.\n",
-      "Made predictions in 0.0072 seconds.\n",
-      "F1 score for test set: 0.7444.\n",
+      "Trained model in 0.1020 seconds\n",
+      "Made predictions in 0.0030 seconds.\n",
+      "F1 score for training set: 0.9635.\n",
+      "Made predictions in 0.0036 seconds.\n",
+      "F1 score for test set: 0.7603.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0011 seconds\n",
-      "Made predictions in 0.0002 seconds.\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0001 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.7444.\n",
+      "Made predictions in 0.0001 seconds.\n",
+      "F1 score for test set: 0.7252.\n",
       "\n",
       "\n",
       "Training a KNeighborsClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0006 seconds\n",
-      "Made predictions in 0.0027 seconds.\n",
-      "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0032 seconds.\n",
+      "Trained model in 0.0005 seconds\n",
+      "Made predictions in 0.0025 seconds.\n",
+      "F1 score for training set: 0.8882.\n",
+      "Made predictions in 0.0024 seconds.\n",
       "F1 score for test set: 0.7847.\n",
       "\n",
       "\n",
       "Training a AdaBoostClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.2259 seconds\n",
-      "Made predictions in 0.0063 seconds.\n",
-      "F1 score for training set: 0.8889.\n",
-      "Made predictions in 0.0057 seconds.\n",
-      "F1 score for test set: 0.7902.\n",
+      "Trained model in 0.0898 seconds\n",
+      "Made predictions in 0.0049 seconds.\n",
+      "F1 score for training set: 0.8851.\n",
+      "Made predictions in 0.0038 seconds.\n",
+      "F1 score for test set: 0.7972.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0015 seconds\n",
+      "Trained model in 0.0020 seconds\n",
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0001 seconds.\n",
-      "F1 score for test set: 0.6325.\n",
+      "Made predictions in 0.0002 seconds.\n",
+      "F1 score for test set: 0.6613.\n",
       "\n",
       "\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0006 seconds\n",
-      "Made predictions in 0.0050 seconds.\n",
-      "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0019 seconds.\n",
+      "Trained model in 0.0009 seconds\n",
+      "Made predictions in 0.0068 seconds.\n",
+      "F1 score for training set: 0.8809.\n",
+      "Made predictions in 0.0023 seconds.\n",
       "F1 score for test set: 0.7801.\n",
       "\n",
       "\n",
       "Training a AdaBoostClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.1737 seconds\n",
-      "Made predictions in 0.0076 seconds.\n",
-      "F1 score for training set: 0.8500.\n",
-      "Made predictions in 0.0056 seconds.\n",
-      "F1 score for test set: 0.7794.\n",
+      "Trained model in 0.1018 seconds\n",
+      "Made predictions in 0.0068 seconds.\n",
+      "F1 score for training set: 0.8501.\n",
+      "Made predictions in 0.0049 seconds.\n",
+      "F1 score for test set: 0.7647.\n",
       "\n",
       "\n",
       "\n",
@@ -586,18 +588,20 @@
     "\n",
     "#KNN classifier initialization parameters\n",
     "knnNeighbors = 5\n",
-    "knnWeights = \"distance\"\n",
+    "knnWeights = \"uniform\"\n",
     "\n",
     "# from sklearn import model_C\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "\n",
     "#AdaBoost initialization parameters\n",
-    "abNoOfEstimators = 100\n",
+    "abNoOfEstimators = 50\n",
     "\n",
     "# TODO: Initialize the three models\n",
-    "clf_A = tree.DecisionTreeClassifier()\n",
+    "clf_A = tree.DecisionTreeClassifier(random_state=42)\n",
     "clf_B = neighbors.KNeighborsClassifier(knnNeighbors, knnWeights)\n",
-    "clf_C = AdaBoostClassifier(n_estimators=abNoOfEstimators,algorithm='SAMME')\n",
+    "clf_C = AdaBoostClassifier(n_estimators=abNoOfEstimators,\n",
+    "                            algorithm='SAMME', \n",
+    "                            random_state=42)\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
     "X_train_100 = None\n",
@@ -707,25 +711,25 @@
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         0.0020 seconds  | 0.0007 seconds         | 1.0              |     0.697       |\n",
-    "| 200               |         0.0011  seconds | 0.0002 seconds         | 1.0              |     0.7444      |\n",
-    "| 300               |         0.0015 seconds  | 0.0002 seconds         | 1.0              |    0.6325      |\n",
+    "| 100               |         0.0015 seconds  | 0.0002 seconds         | 1.0              |     0.654       |\n",
+    "| 200               |         0.0010  seconds | 0.0001 seconds         | 1.0              |     0.7252      |\n",
+    "| 300               |         0.0020 seconds  | 0.0002 seconds         | 1.0              |    0.6613      |\n",
     "\n",
     "** Classifer 2 - KNeighborsClassifier**  \n",
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |     0.0009 seconds      |  0.0017 seconds        |  1.0             |    0.7800       |\n",
+    "| 100               |     0.0005 seconds      |  0.0025 seconds        |  0.888             |    0.7847       |\n",
     "| 200               |     0.0006 seconds      |  0.0027 seconds        |  1.0             |     0.7847      |\n",
-    "| 300               |     0.0006 seconds      |  0.0050 seconds        |  1.0             |    0.7801         |\n",
+    "| 300               |     0.0009 seconds      |  0.0068 seconds        |  0.8809             |    0.7801         |\n",
     "\n",
     "** Classifer 3 - AdaBoostClassifier**  \n",
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |   0.2131 seconds        | 0.0058 seconds         |  0.9706          | 0.7444          |\n",
-    "| 200               |   0.2259 seconds        | 0.0063 seconds         |  0.8889          | 0.7902          |\n",
-    "| 300               |   0.1737 seconds        | 0.0076 seconds         |  0.8500          | 0.7794          |"
+    "| 100               |   0.0898 seconds        | 0.0049 seconds         |  0.8851          | 0.7603          |\n",
+    "| 200               |   0.2259 seconds        | 0.0063 seconds         |  0.8889          | 0.7972          |\n",
+    "| 300               |   0.1018 seconds        | 0.0068 seconds         |  0.8501          | 0.7647          |"
    ]
   },
   {
@@ -763,7 +767,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The AdaBoost model is a \"ensemble prediction model.\" By that I mean that it calculates a prediction by combining the predictions of several simpler models that it automatically creates. Each sub-model prediction is weighted according to how hard it had to work to come up with that prediction."
+    "The AdaBoost model is an \"ensemble prediction model.\" By that I mean that it calculates a prediction by combining the predictions of several simpler models that it automatically creates. Each sub-model prediction is weighted according to how hard it had to work to come up with that prediction.\n",
+    "\n",
+    "Here's an example to describe AdaBoost's learning process:\n",
+    "\n",
+    "Let's say we begin with a set of ten data items as shown below\n",
+    "\n",
+    "![step0](step0.jpg)\n",
+    "\n",
+    "The green +'s and red -'s are the real labels of these items. AdaBoost learns by generating in a step by step process classifiers that are just a little bit better than random guessing i.e., better than 50% by some margin. That margin we will call the error rate.\n",
+    "\n",
+    "So in the first step, Adaboost generates a classifier h1 that works like this:\n",
+    "\n",
+    "![step1](step1.jpg)\n",
+    "\n",
+    "All items to the left are predicted by h1 as +'s, all items to the right are predicted as -'s. As you can see h1 gets 3 of the 10 items incorrect. At step one it thinks all items are equally important, so the error rate at step one is 0.3. \n",
+    "\n",
+    "Now the strength of Adaboost is that it will use this error to calculate weights for the items that it classifies incorrectly. These weights will be used to judge how well the subsequent classifier must work to be accepted for that next step. I will try to express this in the drawing by drawing items that have an increased weight larger than items that have an unchanged weight, and items whose weight has increased as smaller. Also I will draw items smaller or bigger from one step to the next to try to show how the weights change.\n",
+    "\n",
+    "Here is the result after AdaBoost generates a learner for step 2, called h2:\n",
+    "\n",
+    "![step2](step2.jpg)\n",
+    "\n",
+    "In step 2, the learner gets 5 items correct and 3 items wrong. You may think that it has again an error rate of 0.3. In fact the error rate is 0.21 because it was able to in this step guess the 3 items it got wrong correctly in step 1 that are now very important to get right in this current step. The three items that are important are the three green pluses in the upper right of the square that I drew a little larger to express their increased importance to the algorithm.\n",
+    "\n",
+    "AdaBoost then proceeds to step 3 as shown below:\n",
+    "\n",
+    "![step3](step3.jpg)\n",
+    "\n",
+    "In step 3, AdaBoost generates classifier h3. This time it only guesses two items incorrectly (one minus and one plus). It's error rate is better than 0.2 because it guessed correctly the three -'s it got wrong in step 2 (the three larger minues in the bottom center of the square) which consequently have become more important to get correct in this step, while at the same time continuing to correctly guess items it got wrong in the past in this current step.\n",
+    "\n",
+    "These three steps continue until it's not possible to generate a classifier that provides a better error rate, or when you've hit the required acccuracy, or you've run out of time.\n",
+    "\n",
+    "When the learning process described above is complete, AdaBoost then combines the classifiers h1, h2, h3, etc. into a single classifier H. This classifier is simply a *weighted sum* of the little h's. The weights are those that were produced as part of the learning process described above.\n",
+    "\n"
    ]
   },
   {
@@ -898,7 +935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final F1 training score is 1.000 and the final F1 testing score is 0.809. For the untuned model the F1 training score was 0.85 and F1 testing score was 0.779. The results of the tuned model are better than the those of the untuned model."
+    "The final F1 training score is 1.000 and the final F1 testing score is 0.809. For the untuned model the F1 training score was 0.85 and F1 testing score was 0.7647. The results of the tuned model are better than the those of the untuned model."
    ]
   },
   {
