--- a/projects/student_intervention/student_intervention.ipynb
+++ b/projects/student_intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -498,79 +498,82 @@
      "output_type": "stream",
      "text": [
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0015 seconds\n",
-      "Made predictions in 0.0002 seconds.\n",
+      "Trained model in 0.0014 seconds\n",
+      "Made predictions in 0.0008 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0005 seconds.\n",
-      "F1 score for test set: 0.6545.\n",
-      "\n",
-      "\n",
-      "Training a KNeighborsClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0015 seconds.\n",
-      "F1 score for training set: 0.8322.\n",
-      "Made predictions in 0.0036 seconds.\n",
-      "F1 score for test set: 0.7800.\n",
-      "\n",
-      "\n",
-      "Training a AdaBoostClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.1020 seconds\n",
-      "Made predictions in 0.0030 seconds.\n",
-      "F1 score for training set: 0.9635.\n",
-      "Made predictions in 0.0036 seconds.\n",
-      "F1 score for test set: 0.7603.\n",
-      "\n",
-      "\n",
+      "Made predictions in 0.0003 seconds.\n",
+      "F1 score for test set: 0.6552.\n",
       "\n",
       "\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0010 seconds\n",
-      "Made predictions in 0.0001 seconds.\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0006 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0001 seconds.\n",
-      "F1 score for test set: 0.7252.\n",
-      "\n",
-      "\n",
-      "Training a KNeighborsClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0005 seconds\n",
-      "Made predictions in 0.0025 seconds.\n",
-      "F1 score for training set: 0.8882.\n",
-      "Made predictions in 0.0024 seconds.\n",
-      "F1 score for test set: 0.7847.\n",
-      "\n",
-      "\n",
-      "Training a AdaBoostClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0898 seconds\n",
-      "Made predictions in 0.0049 seconds.\n",
-      "F1 score for training set: 0.8851.\n",
-      "Made predictions in 0.0038 seconds.\n",
-      "F1 score for test set: 0.7972.\n",
-      "\n",
-      "\n",
+      "Made predictions in 0.0002 seconds.\n",
+      "F1 score for test set: 0.7500.\n",
       "\n",
       "\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0020 seconds\n",
-      "Made predictions in 0.0002 seconds.\n",
+      "Trained model in 0.0023 seconds\n",
+      "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for test set: 0.6613.\n",
       "\n",
       "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Training a KNeighborsClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0005 seconds\n",
+      "Made predictions in 0.0016 seconds.\n",
+      "F1 score for training set: 0.8060.\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "F1 score for test set: 0.7246.\n",
+      "\n",
+      "\n",
+      "Training a KNeighborsClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0006 seconds\n",
+      "Made predictions in 0.0032 seconds.\n",
+      "F1 score for training set: 0.8800.\n",
+      "Made predictions in 0.0021 seconds.\n",
+      "F1 score for test set: 0.7692.\n",
+      "\n",
+      "\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0009 seconds\n",
-      "Made predictions in 0.0068 seconds.\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0079 seconds.\n",
       "F1 score for training set: 0.8809.\n",
-      "Made predictions in 0.0023 seconds.\n",
+      "Made predictions in 0.0028 seconds.\n",
       "F1 score for test set: 0.7801.\n",
       "\n",
       "\n",
-      "Training a AdaBoostClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.1018 seconds\n",
-      "Made predictions in 0.0068 seconds.\n",
-      "F1 score for training set: 0.8501.\n",
-      "Made predictions in 0.0049 seconds.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Training a AdaBoostClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0965 seconds\n",
+      "Made predictions in 0.0026 seconds.\n",
+      "F1 score for training set: 0.8794.\n",
+      "Made predictions in 0.0027 seconds.\n",
+      "F1 score for test set: 0.7714.\n",
+      "\n",
+      "\n",
+      "Training a AdaBoostClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0978 seconds\n",
+      "Made predictions in 0.0042 seconds.\n",
+      "F1 score for training set: 0.8814.\n",
+      "Made predictions in 0.0032 seconds.\n",
       "F1 score for test set: 0.7647.\n",
+      "\n",
+      "\n",
+      "Training a AdaBoostClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.1007 seconds\n",
+      "Made predictions in 0.0035 seconds.\n",
+      "F1 score for training set: 0.8501.\n",
+      "Made predictions in 0.0025 seconds.\n",
+      "F1 score for test set: 0.7647.\n",
+      "\n",
       "\n",
       "\n",
       "\n",
@@ -603,95 +606,18 @@
     "                            algorithm='SAMME', \n",
     "                            random_state=42)\n",
     "\n",
-    "# TODO: Set up the training set sizes\n",
-    "X_train_100 = None\n",
-    "y_train_100 = None\n",
-    "\n",
-    "X_train_100, X_test, y_train_100, y_test = train_test_split(\n",
-    "                                                    X_all, \n",
-    "                                                    y_all, \n",
-    "                                                    test_size = (X_all.shape[0] - 100), \n",
-    "                                                    train_size = 100,\n",
-    "                                                    random_state = 42\n",
-    "                                                   )\n",
-    "\n",
-    "#for classifier A\n",
-    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
-    "\n",
-    "#for classifier B\n",
-    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
-    "\n",
-    "#for classifier C\n",
-    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
-    "print \"\\n\"\n",
     "\n",
     "\n",
-    "X_train_200 = None\n",
-    "y_train_200 = None\n",
+    "for myclf in [clf_A, clf_B, clf_C]:\n",
+    "    for mysize in [100, 200, 300]:\n",
     "\n",
-    "X_train_200, X_test, y_train_200, y_test = train_test_split(\n",
-    "                                                    X_all, \n",
-    "                                                    y_all, \n",
-    "                                                    test_size = (X_all.shape[0] - 200), \n",
-    "                                                    train_size = 200,\n",
-    "                                                    random_state = 42\n",
-    "                                                   )\n",
-    "\n",
-    "#for classifier A\n",
-    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
+    "        #for classifier A\n",
+    "        train_predict(myclf, X_train[:mysize], y_train[:mysize], X_test, y_test)\n",
+    "        print \"\\n\"\n",
+    "        \n",
+    "    print \"\\n\\n\"\n",
     "\n",
     "\n",
-    "#for classifier B\n",
-    "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
-    "\n",
-    "\n",
-    "#for classifier C\n",
-    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
-    "print \"\\n\"\n",
-    "\n",
-    "\n",
-    "X_train_300 = None\n",
-    "y_train_300 = None\n",
-    "\n",
-    "X_train_300, X_test, y_train_300, y_test = train_test_split(\n",
-    "                                                    X_all, \n",
-    "                                                    y_all, \n",
-    "                                                    test_size = (X_all.shape[0] - 300), \n",
-    "                                                    train_size = 300,\n",
-    "                                                    random_state = 42\n",
-    "                                                   )\n",
-    "\n",
-    "#for classifier A\n",
-    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
-    "\n",
-    "#for classifier B\n",
-    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
-    "\n",
-    "#for classifier C\n",
-    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)\n",
-    "\n",
-    "print \"\\n\"\n",
-    "print \"\\n\"\n",
-    "\n",
-    "\n",
-    "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
-    "# train_predict(clf, X_train, y_train, X_test, y_test)\n",
     "\n"
    ]
   },
@@ -711,25 +637,25 @@
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         0.0015 seconds  | 0.0002 seconds         | 1.0              |     0.654       |\n",
-    "| 200               |         0.0010  seconds | 0.0001 seconds         | 1.0              |     0.7252      |\n",
-    "| 300               |         0.0020 seconds  | 0.0002 seconds         | 1.0              |    0.6613      |\n",
+    "| 100               |         0.0014 seconds  | 0.0008 seconds         | 1.0              |     0.6552       |\n",
+    "| 200               |         0.0020  seconds | 0.0006 seconds         | 1.0              |     0.75      |\n",
+    "| 300               |         0.0023 seconds  | 0.0003 seconds         | 1.0              |    0.6613      |\n",
     "\n",
     "** Classifer 2 - KNeighborsClassifier**  \n",
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |     0.0005 seconds      |  0.0025 seconds        |  0.888             |    0.7847       |\n",
-    "| 200               |     0.0006 seconds      |  0.0027 seconds        |  1.0             |     0.7847      |\n",
-    "| 300               |     0.0009 seconds      |  0.0068 seconds        |  0.8809             |    0.7801         |\n",
+    "| 100               |     0.0005 seconds      |  0.0016 seconds        |  0.8060            |    0.7246       |\n",
+    "| 200               |     0.0006 seconds      |  0.0032 seconds        |  0.880            |     0.7692      |\n",
+    "| 300               |     0.0010 seconds      |  0.0079 seconds        |  0.8809             |    0.7801         |\n",
     "\n",
     "** Classifer 3 - AdaBoostClassifier**  \n",
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |   0.0898 seconds        | 0.0049 seconds         |  0.8851          | 0.7603          |\n",
-    "| 200               |   0.2259 seconds        | 0.0063 seconds         |  0.8889          | 0.7972          |\n",
-    "| 300               |   0.1018 seconds        | 0.0068 seconds         |  0.8501          | 0.7647          |"
+    "| 100               |   0.0965 seconds        | 0.0026 seconds         |  0.8794          | 0.7714          |\n",
+    "| 200               |   0.0978 seconds        | 0.0042 seconds         |  0.8814          | 0.7647          |\n",
+    "| 300               |   0.1007 seconds        | 0.0035 seconds         |  0.8501          | 0.7647          |"
    ]
   },
   {
@@ -821,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -830,10 +756,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0267 seconds.\n",
+      "Made predictions in 0.0126 seconds.\n",
       "Tuned model has a training F1 score of 1.0000.\n",
-      "Made predictions in 0.0176 seconds.\n",
-      "Tuned model has a testing F1 score of 0.8088.\n"
+      "Made predictions in 0.0081 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7867.\n"
      ]
     }
    ],
@@ -861,65 +787,14 @@
     "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
     "grid_obj = GridSearchCV(clf,parameters,f1_scorer)\n",
     "\n",
-    "\n",
-    "#recreating training and testing sets\n",
-    "#X_train_300, X_test, y_train_300, y_test = train_test_split(\n",
-    "#                                                    X_all, \n",
-    "#                                                    y_all, \n",
-    "#                                                    test_size = (X_all.shape[0] - 300), \n",
-    "#                                                    train_size = 300,\n",
-    "#                                                    random_state = 42\n",
-    "#                                                   )\n",
-    "#print \"X_train_300 = \\n\"\n",
-    "#print X_train_300\n",
-    "\n",
-    "#print \"y_train_300 = \\n\"\n",
-    "#print y_train_300\n",
-    "\n",
-    "#print \"X_test = \\n\"\n",
-    "#print X_test\n",
-    "\n",
-    "#print \"y_test = \\n\"\n",
-    "#print y_test\n",
-    "\n",
-    "#print \"old contents of y_train_300\\n\"\n",
-    "#print y_train_300\n",
-    "\n",
-    "#for i in range(len(y_train_300)):\n",
-    "#    if y_train_300.loc[i] == 'yes':\n",
-    "#        y_train_300.set_value(i,1)\n",
-    "#    else:\n",
-    "#        y_train_300.set_value(i,0)\n",
-    "\n",
-    "#y_train_300_2 = []\n",
-    "\n",
-    "#print \"y_train_300_2\", y_train_300_2\n",
-    "\n",
-    "#for col, col_data in y_train_300.iteritems():\n",
-    "#    \n",
-    "#    print \"col_data = \", col_data\n",
-    "#    \n",
-    "#    if col_data == 'yes':\n",
-    "#        y_train_300_2.append(1)\n",
-    "#    else:\n",
-    "#        y_train_300_2.append(0)\n",
-    "\n",
-    "#print \"new contents of y_train_300_2\\n\"\n",
-    "#print y_train_300_2\n",
-    "\n",
-    "#y_train_300_3 = np.asarray(y_train_300_2)\n",
-    "\n",
-    "#print \"y_train_300_3 = \\n\"\n",
-    "#print y_train_300_3\n",
-    "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
-    "grid_obj = grid_obj.fit(X_train_300, y_train_300)\n",
+    "grid_obj = grid_obj.fit(X_train, y_train)\n",
     "\n",
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
     "\n",
     "# Report the final F1 score for training and testing after parameter tuning\n",
-    "print \"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf, X_train_300, y_train_300))\n",
+    "print \"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf, X_train, y_train))\n",
     "print \"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf, X_test, y_test))"
    ]
   },
@@ -935,7 +810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final F1 training score is 1.000 and the final F1 testing score is 0.809. For the untuned model the F1 training score was 0.85 and F1 testing score was 0.7647. The results of the tuned model are better than the those of the untuned model."
+    "The final F1 training score is 1.000 and the final F1 testing score is 0.7867. For the untuned model the F1 training score was 0.85 and F1 testing score was 0.7647. The results of the tuned model are better than the those of the untuned model."
    ]
   },
   {
